[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Cells/CellSize1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GUI/Menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/GUI/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://Prefabs/GUI/default_flat_box.tres" type="StyleBox" id=4]
[ext_resource path="res://Prefabs/GUI/Mediumfont.tres" type="DynamicFont" id=5]

[sub_resource type="Animation" id=1]
resource_name = "round"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CellSize1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 1.0
content_margin_bottom = 5.0
bg_color = Color( 0.223529, 0.215686, 0.25098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.54902, 0.0745098, 0.941176, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spatial" type="Spatial" parent="."]

[node name="CellSize1" parent="Spatial" instance=ExtResource( 1 )]
transform = Transform( -0.900969, 0, 0.433883, 0, 1, 0, -0.433883, 0, -0.900969, 0, 0, 0 )

[node name="CellSize2" parent="Spatial/CellSize1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.73, 0, 0 )

[node name="CellSize3" parent="Spatial/CellSize1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.73, 0, 0 )

[node name="CellSize4" parent="Spatial/CellSize1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.868, 0, -1.498 )

[node name="CellSize7" parent="Spatial/CellSize1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.868, 0, -1.498 )

[node name="CellSize5" parent="Spatial/CellSize1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.868, 0, 1.498 )

[node name="CellSize6" parent="Spatial/CellSize1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.868, 0, 1.498 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 0.798572, 0.601899, 0, -0.601899, 0.798572, -0.006, 2.71151, 3.69303 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spatial"]
playback_speed = 0.3
anims/round = SubResource( 1 )

[node name="OmniLight_red" type="OmniLight" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8033, 2.60356, 1.7461 )
light_color = Color( 0.878431, 0.223529, 0.270588, 1 )
omni_range = 5.05243

[node name="OmniLight_blue" type="OmniLight" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.80756, 2.77045, 0.48629 )
light_color = Color( 0.0823529, 0.839216, 0.898039, 1 )
omni_range = 5.05243

[node name="Visual_components" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_Container" type="CenterContainer" parent="Visual_components"]
margin_right = 1920.0
margin_bottom = 357.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="Visual_components/Title_Container"]
margin_left = 687.0
margin_top = 129.0
margin_right = 1233.0
margin_bottom = 227.0

[node name="MarginContainer" type="MarginContainer" parent="Visual_components/Title_Container/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 539.0
margin_bottom = 91.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Title" type="Label" parent="Visual_components/Title_Container/PanelContainer/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 517.0
margin_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Alakazham - Phoenix"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_Container" type="VBoxContainer" parent="Visual_components"]
margin_left = 763.0
margin_top = 361.0
margin_right = 1156.0
margin_bottom = 718.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Visual_components/Name_Container"]
margin_top = 114.0
margin_right = 393.0
margin_bottom = 176.0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="MarginContainer" type="MarginContainer" parent="Visual_components/Name_Container/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 386.0
margin_bottom = 55.0
size_flags_vertical = 8
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Visual_components/Name_Container/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 374.0
margin_bottom = 43.0
size_flags_horizontal = 4
size_flags_vertical = 10
theme = ExtResource( 3 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Enter your player name:"
align = 1
valign = 1

[node name="Name_Selector" type="LineEdit" parent="Visual_components/Name_Container"]
margin_top = 180.0
margin_right = 393.0
margin_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 5 )
align = 1
clear_button_enabled = true
placeholder_text = "Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="Visual_components"]
margin_top = 722.0
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Visual_components/VBoxContainer2"]
margin_top = 108.0
margin_right = 1920.0
margin_bottom = 162.0
alignment = 1

[node name="Local_Button" type="Button" parent="Visual_components/VBoxContainer2/HBoxContainer"]
margin_left = 691.0
margin_right = 943.0
margin_bottom = 54.0
size_flags_horizontal = 10
theme = ExtResource( 3 )
text = "LocalGame"

[node name="Filler" type="MarginContainer" parent="Visual_components/VBoxContainer2/HBoxContainer"]
margin_left = 947.0
margin_right = 972.0
margin_bottom = 54.0
custom_constants/margin_left = 25

[node name="Online_Button" type="Button" parent="Visual_components/VBoxContainer2/HBoxContainer"]
margin_left = 976.0
margin_right = 1244.0
margin_bottom = 54.0
size_flags_horizontal = 2
theme = ExtResource( 3 )
text = "OnlineGame"

[node name="Filler2" type="MarginContainer" parent="Visual_components/VBoxContainer2"]
margin_top = 166.0
margin_right = 1920.0
margin_bottom = 191.0
custom_constants/margin_top = 25

[node name="Sandbox_Button" type="Button" parent="Visual_components/VBoxContainer2"]
margin_left = 861.0
margin_top = 195.0
margin_right = 1059.0
margin_bottom = 249.0
size_flags_horizontal = 6
theme = ExtResource( 3 )
text = "Sandbox"
